added color code for weather description

--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
             <div class="weather-box">
                 <p class="temperature">0 <sup>°C</sup></p>
                 <p class="description">light rain</p>
+                <p class="name">Place</p>
             </div>
 
             <div class="weather-details">
